# TakeHomePart2

./: BasicCarInfo.qml  BasicInfoCar.qml  CMakeLists.txt  IconTextItem.qml  Main.qml  README.md  ServiceHistory.qml  main.cpp  servicehistory.cpp  servicehistory.h  videopopup.cpp  videopopup.h
assets/data/: New Text Document.txt  history.json
